# DDL-Reminder

./: .gitattributes  LICENSE  README.md  未命名绘图.drawio
esp32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp32/main/: CMakeLists.txt  bsp_board.cpp  encoder.cpp  encoder.h  idf_component.yml  led_controller.cpp  led_controller.h  main.cpp  protocol.cpp  protocol.h
esp32/main/ui/: ui_manager.cpp  ui_manager.h
server/: __init__.py  config.py  protocol.py  requirements.txt  server.py  system_prompt.md
server/asr/: __init__.py  base.py  dashscope_asr.py  funasr_asr.py  whisper_asr.py
server/ddl/: __init__.py  crawler.py  models.py  scheduler.py  store.py
server/llm/: __init__.py  base.py  intent_parser.py  openai_compatible.py
server/tts/: __init__.py  base.py  dashscope_tts.py  edge_tts.py
